// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Language Files Compilation should generate valid IR for assignment 1`] = `
"; ModuleID = 'main'
source_filename = "main"

@print_format = private constant [4 x i8] c"%d\\0A\\00"

declare i32 @printf(i8*, ...)

define i32 @main() {
entry:
  %x = alloca i32, align 4
  store i32 2, i32* %x, align 4
  store i32 5, i32* %x, align 4
  %x1 = load i32, i32* %x, align 4
  ret i32 %x1
}
"
`;

exports[`Language Files Compilation should generate valid IR for binaryExpression 1`] = `
"; ModuleID = 'main'
source_filename = "main"

@print_format = private constant [4 x i8] c"%d\\0A\\00"

declare i32 @printf(i8*, ...)

define i32 @main() {
entry:
  ret i32 8
}
"
`;

exports[`Language Files Compilation should generate valid IR for break 1`] = `
"; ModuleID = 'main'
source_filename = "main"

@print_format = private constant [4 x i8] c"%d\\0A\\00"

declare i32 @printf(i8*, ...)

define i32 @main() {
entry:
  %x = alloca i32, align 4
  store i32 0, i32* %x, align 4
  br label %while.cond

while.cond:                                       ; preds = %endif, %entry
  %x1 = load i32, i32* %x, align 4
  %0 = icmp slt i32 %x1, 9
  br i1 %0, label %while.body, label %while.end

while.body:                                       ; preds = %while.cond
  %x2 = load i32, i32* %x, align 4
  %1 = add i32 %x2, 1
  store i32 %1, i32* %x, align 4
  %x3 = load i32, i32* %x, align 4
  %2 = icmp sgt i32 %x3, 3
  br i1 %2, label %then, label %else

while.end:                                        ; preds = %then, %while.cond
  %i = alloca i32, align 4
  store i32 0, i32* %i, align 4
  br label %for.cond

then:                                             ; preds = %while.body
  br label %while.end

else:                                             ; preds = %while.body
  br label %endif

endif:                                            ; preds = %else
  br label %while.cond

for.cond:                                         ; preds = %for.iter, %while.end
  %i4 = load i32, i32* %i, align 4
  %3 = icmp slt i32 %i4, 4
  br i1 %3, label %for.body, label %for.end

for.body:                                         ; preds = %for.cond
  %i5 = load i32, i32* %i, align 4
  %4 = icmp sgt i32 %i5, 1
  br i1 %4, label %then6, label %else7

for.iter:                                         ; preds = %endif8
  %i9 = load i32, i32* %i, align 4
  %5 = add i32 %i9, 1
  store i32 %5, i32* %i, align 4
  br label %for.cond

for.end:                                          ; preds = %then6, %for.cond
  %x10 = load i32, i32* %x, align 4
  %i11 = load i32, i32* %i, align 4
  %6 = add i32 %x10, %i11
  ret i32 %6

then6:                                            ; preds = %for.body
  br label %for.end

else7:                                            ; preds = %for.body
  br label %endif8

endif8:                                           ; preds = %else7
  br label %for.iter
}
"
`;

exports[`Language Files Compilation should generate valid IR for continue 1`] = `
"; ModuleID = 'main'
source_filename = "main"

@print_format = private constant [4 x i8] c"%d\\0A\\00"

declare i32 @printf(i8*, ...)

define i32 @main() {
entry:
  %x = alloca i32, align 4
  store i32 0, i32* %x, align 4
  %y = alloca i32, align 4
  store i32 0, i32* %y, align 4
  br label %while.cond

while.cond:                                       ; preds = %endif, %then, %entry
  %x1 = load i32, i32* %x, align 4
  %0 = icmp slt i32 %x1, 9
  br i1 %0, label %while.body, label %while.end

while.body:                                       ; preds = %while.cond
  %x2 = load i32, i32* %x, align 4
  %1 = add i32 %x2, 1
  store i32 %1, i32* %x, align 4
  %x3 = load i32, i32* %x, align 4
  %2 = icmp sgt i32 %x3, 4
  br i1 %2, label %then, label %else

while.end:                                        ; preds = %while.cond
  %i = alloca i32, align 4
  store i32 0, i32* %i, align 4
  br label %for.cond

then:                                             ; preds = %while.body
  br label %while.cond

else:                                             ; preds = %while.body
  br label %endif

endif:                                            ; preds = %else
  %y4 = load i32, i32* %y, align 4
  %3 = add i32 %y4, 1
  store i32 %3, i32* %y, align 4
  br label %while.cond

for.cond:                                         ; preds = %for.iter, %while.end
  %i5 = load i32, i32* %i, align 4
  %4 = icmp slt i32 %i5, 4
  br i1 %4, label %for.body, label %for.end

for.body:                                         ; preds = %for.cond
  %i6 = load i32, i32* %i, align 4
  %5 = icmp sgt i32 %i6, 1
  br i1 %5, label %then7, label %else8

for.iter:                                         ; preds = %endif9, %then7
  %i11 = load i32, i32* %i, align 4
  %6 = add i32 %i11, 1
  store i32 %6, i32* %i, align 4
  br label %for.cond

for.end:                                          ; preds = %for.cond
  %y12 = load i32, i32* %y, align 4
  ret i32 %y12

then7:                                            ; preds = %for.body
  br label %for.iter

else8:                                            ; preds = %for.body
  br label %endif9

endif9:                                           ; preds = %else8
  %y10 = load i32, i32* %y, align 4
  %7 = add i32 %y10, 1
  store i32 %7, i32* %y, align 4
  br label %for.iter
}
"
`;

exports[`Language Files Compilation should generate valid IR for expression 1`] = `
"; ModuleID = 'main'
source_filename = "main"

@print_format = private constant [4 x i8] c"%d\\0A\\00"

declare i32 @printf(i8*, ...)

define i32 @main() {
entry:
  ret i32 7
}
"
`;

exports[`Language Files Compilation should generate valid IR for expressionStatement 1`] = `
"; ModuleID = 'main'
source_filename = "main"

@print_format = private constant [4 x i8] c"%d\\0A\\00"

declare i32 @printf(i8*, ...)

define i32 @main() {
entry:
  %x = alloca i32, align 4
  store i32 2, i32* %x, align 4
  %x1 = load i32, i32* %x, align 4
  %0 = add i32 %x1, 1
  %x2 = load i32, i32* %x, align 4
  ret i32 %x2
}
"
`;

exports[`Language Files Compilation should generate valid IR for forLoop 1`] = `
"; ModuleID = 'main'
source_filename = "main"

@print_format = private constant [4 x i8] c"%d\\0A\\00"

declare i32 @printf(i8*, ...)

define i32 @main() {
entry:
  %x = alloca i32, align 4
  store i32 0, i32* %x, align 4
  %i = alloca i32, align 4
  store i32 0, i32* %i, align 4
  br label %for.cond

for.cond:                                         ; preds = %for.iter, %entry
  %i1 = load i32, i32* %i, align 4
  %0 = icmp slt i32 %i1, 4
  br i1 %0, label %for.body, label %for.end

for.body:                                         ; preds = %for.cond
  %i2 = load i32, i32* %i, align 4
  store i32 %i2, i32* %x, align 4
  br label %for.iter

for.iter:                                         ; preds = %for.body
  %i3 = load i32, i32* %i, align 4
  %1 = add i32 %i3, 1
  store i32 %1, i32* %i, align 4
  br label %for.cond

for.end:                                          ; preds = %for.cond
  %x4 = load i32, i32* %x, align 4
  ret i32 %x4
}
"
`;

exports[`Language Files Compilation should generate valid IR for function 1`] = `
"; ModuleID = 'main'
source_filename = "main"

@print_format = private constant [4 x i8] c"%d\\0A\\00"

declare i32 @printf(i8*, ...)

define i32 @main() {
entry:
  %x = alloca i32, align 4
  store i32 2, i32* %x, align 4
  %y = alloca i32, align 4
  store i32 4, i32* %y, align 4
  %z = alloca i32, align 4
  %x1 = load i32, i32* %x, align 4
  %y2 = load i32, i32* %y, align 4
  %0 = call i32 @other(i32 %x1, i32 %y2)
  store i32 %0, i32* %z, align 4
  %z3 = load i32, i32* %z, align 4
  ret i32 %z3
}

define i32 @other(i32 %a, i32 %b) {
entry:
  %a1 = alloca i32, align 4
  store i32 %a, i32* %a1, align 4
  %b2 = alloca i32, align 4
  store i32 %b, i32* %b2, align 4
  %a3 = load i32, i32* %a1, align 4
  %b4 = load i32, i32* %b2, align 4
  %0 = add i32 %a3, %b4
  ret i32 %0
}
"
`;

exports[`Language Files Compilation should generate valid IR for ifStatement 1`] = `
"; ModuleID = 'main'
source_filename = "main"

@print_format = private constant [4 x i8] c"%d\\0A\\00"

declare i32 @printf(i8*, ...)

define i32 @main() {
entry:
  %x = alloca i32, align 4
  store i32 5, i32* %x, align 4
  %x1 = load i32, i32* %x, align 4
  %0 = icmp sgt i32 %x1, 6
  br i1 %0, label %then, label %else

then:                                             ; preds = %entry
  store i32 0, i32* %x, align 4
  br label %endif

else:                                             ; preds = %entry
  br label %endif

endif:                                            ; preds = %else, %then
  %x2 = load i32, i32* %x, align 4
  %1 = icmp sgt i32 %x2, 1
  br i1 %1, label %then3, label %else4

then3:                                            ; preds = %endif
  store i32 2, i32* %x, align 4
  br label %endif5

else4:                                            ; preds = %endif
  br label %endif5

endif5:                                           ; preds = %else4, %then3
  %x6 = load i32, i32* %x, align 4
  ret i32 %x6
}
"
`;

exports[`Language Files Compilation should generate valid IR for mixedComments 1`] = `
"; ModuleID = 'main'
source_filename = "main"

@print_format = private constant [4 x i8] c"%d\\0A\\00"

declare i32 @printf(i8*, ...)

define i32 @main() {
entry:
  %x = alloca i32, align 4
  store i32 0, i32* %x, align 4
  %y = alloca i32, align 4
  store i32 5, i32* %y, align 4
  %x1 = load i32, i32* %x, align 4
  %y2 = load i32, i32* %y, align 4
  %0 = add i32 %x1, %y2
  ret i32 %0
}
"
`;

exports[`Language Files Compilation should generate valid IR for multiLineComment 1`] = `
"; ModuleID = 'main'
source_filename = "main"

@print_format = private constant [4 x i8] c"%d\\0A\\00"

declare i32 @printf(i8*, ...)

define i32 @main() {
entry:
  %x = alloca i32, align 4
  store i32 10, i32* %x, align 4
  %x1 = load i32, i32* %x, align 4
  ret i32 %x1
}
"
`;

exports[`Language Files Compilation should generate valid IR for nestedWhileLoops 1`] = `
"; ModuleID = 'main'
source_filename = "main"

@print_format = private constant [4 x i8] c"%d\\0A\\00"

declare i32 @printf(i8*, ...)

define i32 @main() {
entry:
  %x = alloca i32, align 4
  store i32 0, i32* %x, align 4
  br label %while.cond

while.cond:                                       ; preds = %while.end6, %entry
  %x1 = load i32, i32* %x, align 4
  %0 = icmp slt i32 %x1, 9
  br i1 %0, label %while.body, label %while.end

while.body:                                       ; preds = %while.cond
  %y = alloca i32, align 4
  %x2 = load i32, i32* %x, align 4
  store i32 %x2, i32* %y, align 4
  %x3 = load i32, i32* %x, align 4
  %1 = sub i32 %x3, 2
  store i32 %1, i32* %x, align 4
  br label %while.cond4

while.end:                                        ; preds = %while.cond
  %x10 = load i32, i32* %x, align 4
  ret i32 %x10

while.cond4:                                      ; preds = %while.body5, %while.body
  %x7 = load i32, i32* %x, align 4
  %y8 = load i32, i32* %y, align 4
  %2 = add i32 %y8, 1
  %3 = icmp slt i32 %x7, %2
  br i1 %3, label %while.body5, label %while.end6

while.body5:                                      ; preds = %while.cond4
  %x9 = load i32, i32* %x, align 4
  %4 = add i32 %x9, 1
  store i32 %4, i32* %x, align 4
  br label %while.cond4

while.end6:                                       ; preds = %while.cond4
  br label %while.cond
}
"
`;

exports[`Language Files Compilation should generate valid IR for singleLineComment 1`] = `
"; ModuleID = 'main'
source_filename = "main"

@print_format = private constant [4 x i8] c"%d\\0A\\00"

declare i32 @printf(i8*, ...)

define i32 @main() {
entry:
  %x = alloca i32, align 4
  store i32 5, i32* %x, align 4
  %x1 = load i32, i32* %x, align 4
  ret i32 %x1
}
"
`;

exports[`Language Files Compilation should generate valid IR for whileLoop 1`] = `
"; ModuleID = 'main'
source_filename = "main"

@print_format = private constant [4 x i8] c"%d\\0A\\00"

declare i32 @printf(i8*, ...)

define i32 @main() {
entry:
  %x = alloca i32, align 4
  store i32 0, i32* %x, align 4
  br label %while.cond

while.cond:                                       ; preds = %while.body, %entry
  %x1 = load i32, i32* %x, align 4
  %0 = icmp slt i32 %x1, 11
  br i1 %0, label %while.body, label %while.end

while.body:                                       ; preds = %while.cond
  %x2 = load i32, i32* %x, align 4
  %1 = add i32 %x2, 1
  store i32 %1, i32* %x, align 4
  br label %while.cond

while.end:                                        ; preds = %while.cond
  %x3 = load i32, i32* %x, align 4
  ret i32 %x3
}
"
`;
